--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGO_URL='mongodb://root:example@172.19.0.2:27017/FireSocialDB?authSource=admin'
+MONGO_URL='mongodb://root:example@172.18.0.2:27017/FireSocialDB?authSource=admin'
+JWT_SECRET='asffFasfasfdgasdaddmKf-12in'
