--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,8 @@
     "@types/express-session": "^1.17.3",
     "@types/mongodb": "^3.6.12",
     "@types/mongoose": "^5.10.5",
+    "@types/multer": "^1.4.5",
+    "@types/uuid": "^8.3.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^9.0.0",
@@ -25,7 +27,9 @@
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/chai": "^4.2.18",
