--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "socket.io-client": "^4.1.2",
     "timeago.js": "^4.0.2",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
@@ -49,5 +50,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8800/"
+  "proxy": "http://localhost:8800/",
+  "devDependencies": {
+    "@types/socket.io-client": "^3.0.0"
+  }
 }
